--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,1 +1,9 @@
-# https://www.playframework.com/documentation/latest/Configuration
+slick.dbs.default {
+  driver="slick.driver.H2Driver$"
+  db.driver="org.h2.Driver"
+  db.url="jdbc:h2:mem:play;MODE=MYSQL;DB_CLOSE_DELAY=-1"
+  db.user=yk
+  db.password=""
+}
+
+applyEvolutions.default=true
